changed user flow for make team

--- a/templates/base.html
+++ b/templates/base.html
@@ -16,6 +16,8 @@
                 {% block content %} {% endblock %}
                 <br />
                 {% block output %} {% endblock %}
+                <br />
+                {% block finish %} {% endblock %}
             </div>
         </div>
     </body>
