added logout function

--- a/templates/base.html
+++ b/templates/base.html
@@ -10,6 +10,7 @@
         <div class="page-container">
             <div class="header">
                 <h1> Genshin Impact Project</h1> 
+                {% block logout %} {% endblock %}
             </div> 
     
             <div class="pagecontent">
