--- a/templates/team.html
+++ b/templates/team.html
@@ -1,4 +1,9 @@
 {% extends "base.html" %}
+
+{% block logout %}
+<p> <a class="btn" href="{{ url_for('logout') }}">Logout</a> </p> 
+{% endblock %}
+
 {% block content %}
 <h3> First, enter your weapon data:</h3>
 <p> <a class="btn" href="{{ url_for('enter_weapons') }}"> Enter your weapon data</a> </p> 
