--- a/templates/weapons.html
+++ b/templates/weapons.html
@@ -1,5 +1,10 @@
 {% extends "base.html" %}
 {% block title %} Enter Your Data! {% endblock %}
+
+{% block logout %}
+<p> <a class="btn" href="{{ url_for('logout') }}">Logout</a> </p> 
+{% endblock %}
+
 {% block content %}
 <form action="#" method ="post">
     <label for="weapon">Select weapon name:</label>
