--- a/templates/base.html
+++ b/templates/base.html
@@ -9,7 +9,7 @@
     <body>
         <div class="page-container">
             <div class="header">
-                <h1> Genshin Impact Project</h1> 
+                <h1> Genshin Impact Project!</h1> 
             </div> 
     
             <div class="pagecontent">
