--- a/templates/base.html
+++ b/templates/base.html
@@ -14,6 +14,8 @@
             </div> 
     
             <div class="pagecontent">
+                {% block navbar %} {% endblock %}
+                <br />
                 {% block content %} {% endblock %}
                 <br />
                 {% block output %} {% endblock %}
