added function to modify user weapons

--- a/templates/weapons.html
+++ b/templates/weapons.html
@@ -51,7 +51,30 @@
     <input type="submit" value="Submit"/>
 </form>
 {% elif mode == "mod" %}
-<p> modify weapons </p>
+<form action="#" method ="post">
+    <label for="weapon">Select weapon id to modify:</label>
+    <select name="weaponid">
+    {% for row in output %}
+    <option value="{{ row['weapon_id']}}"> {{ row['weapon_id']}} </option>
+    {% endfor %}
+    </select>
+    <label for="weapon">Select weapon name:</label>
+    <select name="weapon">
+    {% for weap in weapons %}
+    <option value="{{weap}}"> {{weap}} </option>
+    {% endfor %}
+    </select>
+    <label for="refinementlvl">Enter weapon refinement:</label>
+    <select name="refinementlvl">
+        <option value=1> 1 </option>
+        <option value=2> 2 </option>
+        <option value=3> 3 </option>
+        <option value=4> 4 </option>
+        <option value=5> 5 </option>
+    </select>
+    <input type="hidden" name="button_id" value="modify user weapon" />
+    <input type="submit" value="Submit"/>
+</form>
 {% elif mode == "del" %}
 <form action="#" method ="post">
     <label for="weapon">Select weapon id to delete:</label>
