--- a/templates/team.html
+++ b/templates/team.html
@@ -104,7 +104,7 @@
     <p> <a class="btn" href="{{ url_for('enter_characters') }}"> return to characters </a> </p>  
 
 {% if proceed %}
-    <h3> move on to team data: </h3>
-    <p> <a class="btn" href="{{ url_for('make_team') }}"> enter teams </a> </p>  
+    <h3> view all data: </h3>
+    <p> <a class="btn" href="{{ url_for('my_data') }}"> view all data </a> </p>  
 {% endif %} 
 {% endblock %}
