comments on maketeam page

--- a/templates/make_team.html
+++ b/templates/make_team.html
@@ -21,4 +21,5 @@
 <h2> Things to keep in mind:</h2>
 <p> 1. When a character is equipped with a weapon that is then deleted or modified, the character's weapon will be set to 'None' </p>
 <p> 2. When a characer is deleted, all teams that the character is in will also be deleted. </p>
+<p> 3. Teams must have 4 distinct characters </p>
 {% endblock %}
