added return home option

--- a/templates/home.html
+++ b/templates/home.html
@@ -1,5 +1,6 @@
 {% extends "base.html" %}
 {% block logout %}
+<p> <a class="btn" href="{{ url_for('home') }}">Return home</a> </p> 
 <p> <a class="btn" href="{{ url_for('logout') }}">Logout</a> </p> 
 {% endblock %}
 {% block content %}
