--- a/templates/weapons.html
+++ b/templates/weapons.html
@@ -2,6 +2,7 @@
 {% block title %} Enter Your Data! {% endblock %}
 
 {% block logout %}
+<p> <a class="btn" href="{{ url_for('home') }}">Return home</a> </p> 
 <p> <a class="btn" href="{{ url_for('logout') }}">Logout</a> </p> 
 {% endblock %}
 
