--- a/templates/character.html
+++ b/templates/character.html
@@ -1,6 +1,7 @@
 {% extends "base.html" %}
 {% block title %} Enter Your Characters! {% endblock %}
 {% block logout %}
+<p> <a class="btn" href="{{ url_for('home') }}">Return home</a> </p> 
 <p> <a class="btn" href="{{ url_for('logout') }}">Logout</a> </p> 
 {% endblock %}
 
