--- a/templates/base.html
+++ b/templates/base.html
@@ -10,7 +10,9 @@
         <div class="page-container">
             <div class="header">
                 <h1> Genshin Impact Project!</h1> 
-                {% block logout %} {% endblock %}
+                <div class="opts">
+                    {% block logout %} {% endblock %}
+                </div>
             </div> 
     
             <div class="pagecontent">
