--- a/templates/make_team.html
+++ b/templates/make_team.html
@@ -5,6 +5,6 @@
 {% endblock %}
 
 {% block content %}
-<h3> First, enter your weapon data:</h3>
-<p> <a class="btn" href="{{ url_for('enter_weapons') }}"> Enter your weapon data</a> </p> 
+<h3 id="enter"> First, enter your weapon data:</h3>
+<p> <a class="btn moveForward" href="{{ url_for('enter_weapons') }}"> Enter your weapon data</a> </p> 
 {% endblock %}
