--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,7 @@
     <input type="text" name="user" />
     <br />
     <label for="pw">password: </label>
-    <input type="text" name="pw" />
+    <input type="text" name="pw" /><br>
     <input type="submit" value="Submit"/>
 </form>
 {% endblock %}
