--- a/templates/weapons.html
+++ b/templates/weapons.html
@@ -114,6 +114,6 @@
 {% block finish %}
 {% if proceed %}
     <h3> move on to character data: </h3>
-    <p> <a class="btn moveForward" href="{{ url_for('enter_characters') }}"> Click here </a> </p>  
+    <p> <a class="btn" href="{{ url_for('enter_characters') }}"> Click here </a> </p>  
 {% endif %} 
 {% endblock %}
