--- a/static/css/style.css
+++ b/static/css/style.css
@@ -32,23 +32,32 @@ html, body {
    text-align: center;
    position: absolute;
    left: 0%;
-   width: 50%;
+   width: 45%;
    padding: 10px;
+   background-color: rgba(165, 204, 232, 0.3);
+   padding: 15px;
+   margin: 10;
 }
 
 .containerR {
     position: absolute;
     text-align: center;
     right: 0%;
-    width: 50%;
+    width: 45%;
     padding: 10px;
+    background-color: rgba(165, 204, 232, 0.3);
+    padding: 15px;
+    margin: 10;
  }
 
  .containerRList {
     position: absolute;
     right: 0%;
-    width: 50%;
+    width: 45%;
     padding: 10px;
+    background-color: rgba(165, 204, 232, 0.3);
+    padding: 15px;
+    margin: 10;
  }
 
 .btn {
