--- a/static/css/style.css
+++ b/static/css/style.css
@@ -37,6 +37,8 @@ html, body {
    background-color: rgba(165, 204, 232, 0.3);
    padding: 15px;
    margin: 10;
+   padding-top: 25px;
+   padding-bottom: 25px;
 }
 
 .containerR {
@@ -48,6 +50,8 @@ html, body {
     background-color: rgba(165, 204, 232, 0.3);
     padding: 15px;
     margin: 10;
+    padding-top: 25px;
+    padding-bottom: 25px;
  }
 
  .containerRList {
@@ -58,6 +62,8 @@ html, body {
     background-color: rgba(165, 204, 232, 0.3);
     padding: 15px;
     margin: 10;
+    padding-top: 25px;
+    padding-bottom: 25px;
  }
 
 .btn {
