--- a/templates/index.html
+++ b/templates/index.html
@@ -1,5 +1,6 @@
 {% extends "base.html" %}
 {% block content %}
+<p>Please log in with your mySQL credentials.</p><br>
 <form action="#" method ="post">
     <label for="user">username: </label>
     <input type="text" name="user" />
