--- a/templates/mydata.html
+++ b/templates/mydata.html
@@ -2,7 +2,7 @@
 {% block title %} View Your Entered Data {% endblock %}
 
 {% block logout %}
-<p> <a class="btn" href="{{ url_for('home') }}">Return home</a> </p> 
+<p> <a class="btn" href="{{ url_for('home') }}">Home</a> </p> 
 <p> <a class="btn" href="{{ url_for('logout') }}">Logout</a> </p> 
 {% endblock %}
 
